--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ application:
       protocol: "${MQTT_EDGE_PROTOCOL:tcp}"
       host: "${MQTT_EDGE_HOST:localhost}"
       port: "${MQTT_EDGE_PORT:1883}"
-      topic: "${MQTT_EDGE_TOPIC:HEALTH}"
+      topic: "${MQTT_EDGE_TOPIC:HEALTH_TMP}"
     cloud:
       protocol: "${MQTT_CLOUD_PROTOCOL:tcp}"
       host: "${MQTT_CLOUD_HOST:localhost}"
@@ -13,6 +13,10 @@ application:
   dataCapturesSize: 10000
   updateCron: 0 * * * * *
 
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 server:
   port: "${INTERNAL_SERVICE_PORT:8080}"
